--- a/ionic_propulsion_lab/config.json
+++ b/ionic_propulsion_lab/config.json
@@ -12,11 +12,17 @@
     "Va_steps": 20,
     "Ib_range": [0.1, 5.0],
     "Ib_steps": 15,
-    "tau_open": 0.7,
-    "tau_trans": 0.95,
+    "geometry": {
+      "A_grid": 0.01,
+      "d": 0.002,
+      "tau_geom": 0.7
+    },
+    "losses": {
+      "tau_trans": 0.95
+    },
     "divergence": {
-      "model": "gaussian",
-      "param_deg": 5.0
+      "model": "cos",
+      "sigma_deg": 5.0
     }
   },
   "hall_thruster": {
