--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+C:/Users/Kobyd/OneDrive/Documents/GitHub/Phase-Coherent-Consciousness-Field-Explorer filter=lfs diff=lfs merge=lfs -text
